css/styles.css
/*! Generated by Font Squirrel (https://www.fontsquirrel.com) on August 15, 2018 */

@font-face {
	font-family: 'finlandica-bold';
	src: url('fonts/finlandica-boldWeb.woff2') format('woff2'),
		url('fonts/finlandica-boldWeb.woff') format('woff'),
		url('fonts/finlandica-boldWeb.ttf') format('truetype');
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: 'finlandica-bolditalic';
	src: url('fonts/finlandica-bolditalicWeb.woff2') format('woff2'),
		url('fonts/finlandica-bolditalicWeb.woff') format('woff'),
		url('fonts/finlandica-bolditalicWeb.ttf') format('truetype');
	font-weight: bold;
	font-style: italic;
}

@font-face {
	font-family: 'finlandica-italic';
	src: url('fonts/finlandica-italicWeb.woff2') format('woff2'),
		url('fonts/finlandica-italicWeb.woff') format('woff'),
		url('fonts/finlandica-italicWeb.ttf') format('truetype');
	font-weight: normal;
	font-style: italic;
}

@font-face {
	font-family: 'finlandica-regular';
	src: url('fonts/finlandica-regularWeb.woff2') format('woff2'),
		url('fonts/inlandica-regularWeb.woff') format('woff'),
		url('fonts/finlandica-regularWeb.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

:root {
	--primaryColor: #0e38a2;
	--secondaryColor: #dfdfdf;
	--whiteColor: #fff;
	--blackColor: #212529;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	font-family: 'finlandica-regular';
	line-height: 1.6;
}

img {
	display: block;
	width: 100%;
}

/* GENERAL STYLES */
section {
	padding: 0 2rem 3rem;
}

.section-header__title {
	color: var(--primaryColor);
	font-family: 'finlandica-bold';
	font-size: 2.8rem;
	line-height: 1.2;
	margin-bottom: 1.1rem;
}

.section-header__text {
	font-size: 1.5rem;
	line-height: 1.3;
	margin-bottom: 4rem;
}

.section-header__text--modified {
	margin-top: -3rem;
	margin-bottom: 1rem;
}

.header {
	margin-bottom: 3rem;
}
.sub-header,
.desktop-link {
	display: none;
}

.menu-toggle {
	padding: 1.3rem;
	border-right: solid 1px var(--secondaryColor);
}

.menu-toggle-bar {
	width: 2.3rem;
	height: 0.185rem;
	background-color: #0e38a2;
}

.menu-toggle-bar:not(:last-child) {
	margin-bottom: 0.65rem;
}
.logo {
	padding: 0 1.3rem;
	font-weight: lighter;
	line-height: 1.1;
	color: var(--primaryColor);
}
.logo span {
	display: block;
	font-family: 'finlandica-bold';
}

.search-icon {
	margin-left: auto;
	margin-right: 1rem;
	display: block;
	font-size: 1.4rem;
	font-weight: lighter;
	color: var(--primaryColor);
}

.main-header {
	display: flex;
	justify-content: center;
	align-items: center;
}

.banner {
	min-height: 100vh;
	background: linear-gradient(rgba(12, 12, 24, 0.75), rgba(55, 56, 104, 0.75)),
		url('../img/background.jpg') center/cover no-repeat;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
}

.banner__title {
	color: var(--whiteColor);
	font-family: 'finlandica-bold';
	font-size: 4.8rem;
	line-height: 1.1;
	margin-bottom: 1rem;
}

.banner__title span {
	font-weight: lighter;
	font-family: 'finlandica-regular';
}

.banner__text {
	color: var(--whiteColor);
	text-transform: uppercase;
	font-size: 1.7rem;
	line-height: 1.2;
	max-width: 550px;
	margin: 0.8rem auto 0;
}

.container {
	max-width: 1400px;

	margin: 0 auto;
}
.category {
	margin-bottom: 5rem;
}
.jobs-by-category,
.jobs-by-region {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-gap: 0.6rem;
}

.job-category,
.job-region {
	position: relative;
}

.job-category::before,
.job-region::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	transition: all 250ms linear;
}

.job-category:hover::before,
.job-region:hover::before {
	background-color: rgba(0, 0, 0, 0.4);
}

.img-container {
	height: 130px;
	overflow: hidden;
}

.job-category__text,
.job-region__text {
	color: var(--whiteColor);
	font-size: 1.5rem;
	line-height: 1.2;
	position: absolute;
	bottom: 15%;
	left: 10%;
	z-index: 2;
	transition: all 500ms ease-in-out;
	/* display: block; */
}

.job-category:hover .job-category__text,
.job-region:hover .job-region__text {
	text-decoration: underline;
}

.other {
	background-color: var(--primaryColor);
}

/* EXPLORE BY REGION */
.btn {
	display: inline-block;
	background-color: var(--primaryColor);
	color: var(--whiteColor);
	font-size: 1.125rem;
	text-decoration: none;
	border-radius: 3px;
	padding: 0.6rem 0.9rem;
	margin-bottom: 4rem;
	transition: all 250ms ease;
}

.btn:hover {
	background-color: rgba(14, 56, 162, 0.9);
	color: rgba(255, 255, 255, 0.9);
}

/* FOOTER STYLES */
.scrollup-icon {
	display: none;
}
.footer {
	position: relative;
	padding: 4rem 3rem;
	background-color: var(--primaryColor);
	color: var(--whiteColor);
	margin-top: 10rem;
}
.footer-grid {
	display: grid;
	grid-template-rows: 1fr 1fr 1fr;
}
.footer-logo {
	font-weight: lighter;
}

.footer-logo span {
	font-family: finlandica-bold;
	display: block;
}

.footer-links__title {
	margin-bottom: 0.8rem;
	font-family: finlandica-bold;
}

.footer-links__content {
	/* line-height: 1.2; */
	margin-bottom: 1rem;
}
.footer-sublinks {
	align-self: flex-end;
}
.footer-links__content a,
.footer-sublinks a {
	text-decoration: none;
	color: inherit;
	font-family: 'finlandica-bold';
	display: block;
}
.footer-sublinks a {
	margin-bottom: 1rem;
}

/* MEDIA QUERIES */

@media screen and (min-width: 768px) {
	.menu-toggle,
	.search-icon {
		display: none;
	}

	.main-header {
		padding: 1.3rem 2rem;
		justify-content: space-between;
	}

	.logo {
		font-size: 2rem;
		letter-spacing: -1px;
	}

	.desktop-link {
		display: block;
		text-decoration: none;
		font-size: 0.9rem;
		color: var(--primaryColor);
		align-self: baseline;
	}

	.desktop-link:hover {
		text-decoration: underline;
	}

	/* NAVIGATION */
	.sub-header {
		display: block;
		background-color: var(--primaryColor);
		padding: 0.6rem 2rem;
	}

	.navigation {
		display: flex;
		justify-content: space-between;
	}
	.nav__list {
		/* padding: 0.6rem 2rem; */
		flex: 0 0 auto;
		list-style: none;
		display: flex;
	}

	.nav__item + .nav__item {
		margin-left: 0.3rem;
	}

	.nav__item {
		position: relative;
		/* padding: 0.5rem; */
	}

	.nav__item::before {
		content: '';
		width: 100%;
		height: 3px;
		background-color: var(--whiteColor);
		position: absolute;
		display: block;
		bottom: -0.6rem;
		opacity: 0;
		/* transform: scaleX(0); */
		transition: opacity 200ms ease-in;
		/* transform-origin: left; */
	}
	.nav__item::before .active {
		opacity: 1;
	}

	.nav__item:hover::before {
		opacity: 1;
		/* transform: scaleX(1); */
	}
	.nav__link {
		display: inline-block;
		padding: 0 0.8rem;
		text-align: center;
		color: var(--whiteColor);
		text-decoration: none;
	}

	/* dropdown menu */

	.nav__item--dropdown {
		position: relative;
	}
	.dropdown__list {
		position: absolute;
		top: 2.2rem;
		background-color: var(--whiteColor);
		list-style: none;
		width: 200px;
		opacity: 0;
		transition: opacity 300ms ease-out;
		/* padding: 0.3rem 0.6rem; */
	}

	.nav__item--dropdown:hover .dropdown__list {
		opacity: 1;
	}
	.dropdown__item {
		background-color: var(--whiteColor);
		/* margin-left: 0.5rem; */
		/* padding: 0.3rem 0.6rem; */
	}

	.dropdown__item:hover {
		background-color: rgba(223, 223, 223, 0.25);
	}
	.dropdown__link {
		color: var(--primaryColor);
		text-decoration: none;
		display: block;
		padding: 0.3rem 0.6rem;
		text-transform: capitalize;
		/* background-color: var(--secondaryColor); */
	}
	.search-icon--desktop {
		align-self: baseline;
		display: block;
		color: var(--whiteColor);
		flex: 0 0 auto;
		position: relative;
		cursor: pointer;
		/* padding: 0.5rem; */
	}

	.banner__title {
		font-size: 6rem;
		width: 80%;
	}

	.banner__text {
		max-width: 750px;
	}

	/* search modal */

	.search-modal {
		text-align: center;
		border-radius: 2px;
		width: 300px;
		padding: 1rem 0.8rem;
		display: flex;
		/* justify-content: space-between; */
		background-color: var(--whiteColor);
		position: absolute;
		right: 2rem;
		top: 9.85rem;
		/* transform: scaleX(0); */
		opacity: 0;
		transition: opacity 250ms ease-in;
	}

	.search-modal::after {
		content: '';
		display: block;
		position: absolute;
		width: 0.6rem;
		height: 0.6rem;
		/* border: 2px solid black; */
		background-color: var(--whiteColor);
		top: -7%;
		/* left: 50%; */
		right: 4%;
		/* bottom: 0; */
		transform: rotate(45deg);
		border-left: none;
		border-top: none;
	}

	.showModal {
		opacity: 1;
	}

	.search-modal__input {
		display: block;
		outline-color: rgba(223, 223, 223, 0.15);
		flex: 1 0 auto;
		padding: 0.2rem;
	}

	.search-modal__input:focus {
		outline: none;
	}

	.search-modal__input::placeholder {
		color: var(--primaryColor);
		font-size: 1.05rem;
	}
	.search-modal__icon {
		display: block;
		padding: 0.5rem 0.8rem;
		background-color: var(--primaryColor);
		color: var(--whiteColor);
		flex: 1 0 auto;
	}
	/* GRID */
	.jobs-by-category,
	.jobs-by-region {
		grid-template-columns: repeat(3, 1fr);
	}

	.img-container {
		height: 160px;
	}

	/* FOOTER */
	.footer-grid {
		grid-template-columns: 1fr minmax(auto, 1fr) 1fr 1fr;
		grid-template-rows: none;
	}
	.footer-sublinks {
		grid-column: 4/5;
		margin-top: 3rem;
		align-self: start;
	}
	.scrollup-icon {
		display: block;
		position: fixed;
	}
}

@media screen and (min-width: 992px) {
	.search-modal {
		right: 2rem;
	}

	.jobs-by-category,
	.jobs-by-region {
		grid-template-columns: repeat(4, 1fr);
	}

	.img-container {
		height: 200px;
	}
}

@media screen and (min-width: 1200px) {
	html {
		background-color: var(--secondaryColor);
	}

	.container {
		all: unset;
	}
	body {
		background-color: var(--whiteColor);
		max-width: 1600px;
		margin: 0 auto;
	}

	.img-container {
		height: 240px;
	}

	.search-modal {
		right: 2.5rem;
	}
}

@media screen and (min-width: 1700px) {
	.search-modal {
		right: 11.5rem;
	}
}

